<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EHS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcom">欢迎使用医患系统</string>
    <string name="logining">正在登陆，请稍后。。。</string>
    <string name="input_account">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="remember_pswd">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="search_pass">找回密码</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_pswd">请输入密码</string>
    <string name="input_email">请输入邮箱</string>
    <string name="register_ok">确定注册</string>
    <string name="azsh">按住说话</string>
    <string name="group">群</string>
    <string name="discuss">讨论组</string>
    <string name="service">生活服务</string>
    <string name="search">搜索</string>
    <string name="pull_refresh_tap_label">点击刷新...</string>
    <string name="release_to_fresh_text">松开可以刷新...</string>
    <string name="pull_to_fresh_text">下拉可以刷新...</string>
    <string name="list_refreshing_text">正在刷新...</string>
    <string name="load_again">加载失败，请重新加载</string>
    <string name="old_pswd">请输入现在的密码</string>
    <string name="new_pswd">请输入新密码</string>
    <string name="verify_new_pswd">请再次输入新密码</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_invalid_password_again">两次密码不一致</string>
    <string name="error_field_required">此项不能为空</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="exit_account">退出账号</string>
    <string name="submit">提交</string>
    <string name="account">请输入账号</string>
    <string name="phone_number">请输入电话号码</string>
    <string name="input_new_pswd">请输入新密码</string>
    <string name="error_invalid_telephone">无效的电话号码</string>
    <string name="error_invalid_account">无效的账号</string>
    <string name="hospitalinform">医院介绍</string>
    <string name="hospitalinform1">	                医院是指以向人提供医疗护理服务为主要目的的医疗机构。
	        其服务对象不仅包括患者和伤员，也包括处于特定生理状态的健康人
	        （如孕妇、产妇、新生儿）以及完全健康的人（如来医院进行体格检查或口腔清洁的人）。
	        最初设立时，是供人避难，还备有娱乐节目，使来者舒适，有招待意图。
	        后来，才逐渐成为收容和治疗病人的专门机构。
	          医院是指以向人提供医疗护理服务为主要目的的医疗机构。
	        其服务对象不仅包括患者和伤员，也包括处于特定生理状态的健康人
	        （如孕妇、产妇、新生儿）以及完全健康的人（如来医院进行体格检查或口腔清洁的人）。
	        最初设立时，是供人避难，还备有娱乐节目，使来者舒适，有招待意图。
	        后来，才逐渐成为收容和治疗病人的专门机构
	          医院是指以向人提供医疗护理服务为主要目的的医疗机构。
	        其服务对象不仅包括患者和伤员，也包括处于特定生理状态的健康人
	        （如孕妇、产妇、新生儿）以及完全健康的人（如来医院进行体格检查或口腔清洁的人）。
	        最初设立时，是供人避难，还备有娱乐节目，使来者舒适，有招待意图。
	        后来，才逐渐成为收容和治疗病人的专门机构      </string>
    <string name="paediatrics">儿科</string>
    <string name="gastroenterology">内科</string>
    <string name="surgical">外科</string>
    <string name="Gynecology">妇科</string>
    <string name="optometry">眼科</string>
    <string name="ENTdepartment">耳鼻喉科</string>
    <string name="title_activity_paediatrics">PaediatricsActivity</string>
    <string name="title_activity_one_doctor">OneDoctor</string>
    <string name="title_activity_good_info">GoodInfoActivity</string>
    <string name="title_activity_purse_good">PurseGoodActivity</string>
    <string name="title_activity_good_order">GoodOrderActivity</string>
    <string name="title_activity_un_submit_good">UnSubmitGoodActivity</string>

</resources>
