<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/logining"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
        <LinearLayout 
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" 
            android:paddingTop="0dp"
            android:background="@drawable/bg_login_activity"
            >
        <include 
        layout="@layout/title_activity"
        />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
           >
            <EditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/input_account"
           		android:layout_marginTop="10dp"
                android:maxLines="1"
                android:singleLine="true" 
                android:background="@drawable/bg_input_top"
                android:padding="8dip"
                />
			<View 
			    android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@drawable/divider_input"
                android:id="@+id/divider_input"
                android:layout_marginTop="70dp"
			    />
            <EditText
                android:id="@+id/password"
                android:layout_below="@id/divider_input"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/input_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="登陆。。。"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/bg_input_bottom"
                android:padding="8dip"
                />
            <LinearLayout 
                android:id="@+id/save_login"
                android:layout_below="@id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <CheckBox 
                    android:id="@+id/save_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/remember_pswd"
                    android:textSize="@dimen/medium_text"/>
                <CheckBox 
                    android:id="@+id/auto_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/auto_login"
                    android:textSize="@dimen/medium_text"
/>
            </LinearLayout>

            <Button
                android:id="@+id/login"
                android:layout_below="@id/save_login"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:text="@string/login" 
                android:background="@drawable/bg_submit_btn"
                android:textColor="#000000"
                />
          <LinearLayout 
               	android:layout_below="@id/login"
			    android:layout_width="fill_parent"
			    android:layout_height="40dip"
			    android:orientation="horizontal"
			    android:layout_alignParentBottom="true"
			    android:gravity="bottom|center_horizontal"
			    android:paddingBottom="10dp">
			 	<Button
				    android:id="@+id/register_new_user"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/register"
				    android:textSize="@dimen/middle_text"
				    android:background="@android:color/transparent"
				    android:textColor="@color/color_tip"
				    />
				<TextView 
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="    |    "
				    android:textSize="@dimen/huge_text"
				    android:textColor="@color/color_tip"
				    />
				<Button
				    android:id="@+id/search_password"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/search_pass"
				    android:background="@android:color/transparent"
				    android:textSize="@dimen/middle_text"
				    android:textColor="@color/color_tip"
				    />
         </LinearLayout>
        </RelativeLayout>
        </LinearLayout>
  <!-- </ScrollView>  --> 
	
</merge>