<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg_login_activity">
     <include 
         android:id="@+id/register_title"
        layout="@layout/title_activity"
        />
     <EditText 
	    android:id="@+id/input_account"
	    android:layout_below="@id/register_title"
	    android:layout_width="fill_parent"
	    android:layout_height="60dip"
	    android:hint="@string/input_username"
	    android:layout_marginTop="20dip"
	    android:layout_marginLeft="8dp"
	    android:layout_marginRight="8dp"
	    android:background="@drawable/bg_input_top"
	    android:padding="8dip"
	    android:inputType="text"
	    />
     <View 
	    android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="8dp"
	    android:layout_marginRight="8dp"
        android:layout_below="@id/input_account"
        android:background="@drawable/divider_input"
        android:id="@+id/divider_input_one"
	    />
	<EditText 
	    android:id="@+id/input_password"
	    android:layout_below="@id/divider_input_one"
	    android:layout_width="fill_parent"
	    android:layout_height="60dip"
	    android:hint="@string/input_pswd"
	    android:layout_marginLeft="8dp"
	    android:layout_marginRight="8dp"
	    android:background="@drawable/bg_input_center"
	    android:padding="8dip"
	    android:password="true"
	    />
	<View 
	    android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="8dp"
	    android:layout_marginRight="8dp"
        android:layout_below="@+id/input_password"
        android:background="@drawable/divider_input"
        android:id="@+id/divider_input_two"
	    />
    <EditText 
	    android:id="@+id/input_email"
	    android:layout_below="@id/divider_input_two"
	    android:layout_width="fill_parent"
	    android:layout_height="60dip"
	    android:layout_marginLeft="8dp"
	    android:layout_marginRight="8dp"
	    android:hint="@string/input_email"
	    android:background="@drawable/bg_input_bottom"
	    android:padding="8dip"
	    android:inputType="textEmailAddress"
	   />
    
    <Button 
	    android:id="@+id/register_ok"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dip"
	    android:layout_marginLeft="8dp"
	    android:layout_marginRight="8dp"
	    android:layout_below="@id/input_email"
	    android:background="@drawable/bg_submit_btn"
	    android:text="@string/register_ok"
	    android:textColor="@color/white"
	    />

</RelativeLayout>
